# cli-anything-inkstitch

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
skills/cli-anything-inkstitch/: SKILL.md
skills/embroidery-digitization/: SKILL.md
src/cli_anything_inkstitch/: __init__.py  __main__.py  binary.py  cli.py  errors.py  history.py  inkscape.py  output.py  project.py  repl.py
src/cli_anything_inkstitch/commands/: _helpers.py  commands_group.py  document.py  element.py  export.py  params.py  preview.py  schema_group.py  session.py  tools.py  validate.py
src/cli_anything_inkstitch/schema/: bootstrap.py  cache.py  extract.py  validate.py
src/cli_anything_inkstitch/svg/: attrs.py  colors.py  document.py  elements.py  geometry.py  prep.py  validation.py
tests/: conftest.py  test_context.py  test_describe.py  test_extractor.py  test_namespace.py  test_open_rails.py  test_prep.py  test_raster.py  test_smoke.py  test_threads.py  test_validate_fix.py  test_validate_run.py  test_warnings.py
