[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-anything-inkstitch"
version = "0.1.2"
description = "Stateful CLI for machine-embroidery digitization with Ink/Stitch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "cli-anything-inkstitch contributors" }]
dependencies = [
    "click>=8.1",
    "lxml>=4.9",
    "pyembroidery>=1.5",
    "rich>=13.0",
    "filelock>=3.12",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
cli-anything-inkstitch = "cli_anything_inkstitch.__main__:main"
inkstitch-cli = "cli_anything_inkstitch.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_anything_inkstitch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
